# alicia-editor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.txt
include/libpak/: algorithms.hpp  definitions.hpp  libpak.hpp  util.hpp
src/editor/: main.cpp
src/editor/util/: util.cpp  util.hpp
src/libpak/: libpak.cpp
src/web/: index.html
